--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -150,3 +150,38 @@ ManualIPAddress=
 [/Script/NavigationSystem.RecastNavMesh]
 RuntimeGeneration=Dynamic
 
+[OnlineSubsystemEOS]
+bEnabled=true
+
+[OnlineSubsystem]
+DefaultPlatformService=EOS
+
+[/Script/Engine.GameEngine]
++NetDriverDefinitions=(DefName="GameNetDriver",DriverClassName="OnlineSubsystemEOS.NetDriverEOS",DriverClassNameFallback="OnlineSubsystemUtils.IpNetDriver")
+
+[/Script/OnlineSubsystemEOS.NetDriverEOS]
+bIsUsingP2PSockets=true
+
+[/Script/OnlineSubsystemEOS.EOSSettings]
+CacheDir=CacheDir
+DefaultArtifactName=LSEOS
+TickBudgetInMilliseconds=0
+bEnableOverlay=True
+bEnableSocialOverlay=True
+bEnableEditorOverlay=False
+bShouldEnforceBeingLaunchedByEGS=False
+TitleStorageReadChunkLength=0
++Artifacts=(ArtifactName="LSEOS",ClientId="xyz123",ClientSecret="xyz111",ProductId="xyz246",SandboxId="xyz357",DeploymentId="xyz468",ClientEncryptionKey="")
+-AuthScopeFlags=BasicProfile
+-AuthScopeFlags=FriendsList
+-AuthScopeFlags=Presence
++AuthScopeFlags=BasicProfile
++AuthScopeFlags=FriendsList
++AuthScopeFlags=Presence
+bUseEAS=True
+bUseEOSConnect=True
+bMirrorStatsToEOS=True
+bMirrorAchievementsToEOS=True
+bUseEOSSessions=True
+bMirrorPresenceToEAS=True
+
