231102_그래플링 훅 #4

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -1,6 +1,6 @@
 [/Script/EngineSettings.GameMapsSettings]
-GameDefaultMap=/Game/LS/Maps/step4.step4
-EditorStartupMap=/Game/LS/Maps/step4.step4
+GameDefaultMap=/Game/LS/Maps/Title.Title
+EditorStartupMap=/Game/LS/Maps/LS_Level_1.LS_Level_1
 GlobalDefaultGameMode=/Script/LooterShooter.LSGameMode
 GameInstanceClass=/Script/LooterShooter.LSGameInstance
 
@@ -116,10 +116,10 @@ ManualIPAddress=
 +DefaultChannelResponses=(Channel=ECC_GameTraceChannel3,DefaultResponse=ECR_Ignore,bTraceType=False,bStaticObject=False,Name="ItemBox")
 +DefaultChannelResponses=(Channel=ECC_GameTraceChannel4,DefaultResponse=ECR_Ignore,bTraceType=True,bStaticObject=False,Name="Interact")
 +DefaultChannelResponses=(Channel=ECC_GameTraceChannel5,DefaultResponse=ECR_Ignore,bTraceType=False,bStaticObject=False,Name="LootItem")
-+EditProfiles=(Name="OverlapAll",CustomResponses=((Channel="LSCharacter",Response=ECR_Overlap),(Channel="ItemBox",Response=ECR_Overlap),(Channel="LootItem",Response=ECR_Overlap)))
++EditProfiles=(Name="OverlapAll",CustomResponses=((Channel="LSCharacter",Response=ECR_Overlap),(Channel="ItemBox",Response=ECR_Overlap),(Channel="LootItem",Response=ECR_Overlap),(Channel="Attack",Response=ECR_Overlap),(Channel="Interact",Response=ECR_Overlap)))
 +EditProfiles=(Name="OverlapAllDynamic",CustomResponses=((Channel="LSCharacter",Response=ECR_Overlap),(Channel="ItemBox",Response=ECR_Overlap),(Channel="LootItem",Response=ECR_Overlap)))
 +EditProfiles=(Name="IgnoreOnlyPawn",CustomResponses=((Channel="LSCharacter",Response=ECR_Ignore)))
-+EditProfiles=(Name="OverlapOnlyPawn",CustomResponses=((Channel="LSCharacter",Response=ECR_Overlap)))
++EditProfiles=(Name="OverlapOnlyPawn",CustomResponses=((Channel="LSCharacter",Response=ECR_Overlap),(Channel="ItemBox"),(Channel="LootItem")))
 +EditProfiles=(Name="Spectator",CustomResponses=((Channel="LSCharacter",Response=ECR_Ignore)))
 +EditProfiles=(Name="CharacterMesh",CustomResponses=((Channel="LSCharacter",Response=ECR_Ignore),(Channel="Attack")))
 +EditProfiles=(Name="Ragdoll",CustomResponses=((Channel="LSCharacter",Response=ECR_Ignore)))
