--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -111,12 +111,14 @@ ManualIPAddress=
 +Profiles=(Name="LSTrigger",CollisionEnabled=QueryOnly,bCanModify=True,ObjectTypeName="WorldDynamic",CustomResponses=((Channel="WorldStatic",Response=ECR_Ignore),(Channel="WorldDynamic",Response=ECR_Ignore),(Channel="Pawn",Response=ECR_Ignore),(Channel="Visibility",Response=ECR_Ignore),(Channel="Camera",Response=ECR_Ignore),(Channel="PhysicsBody",Response=ECR_Ignore),(Channel="Vehicle",Response=ECR_Ignore),(Channel="Destructible",Response=ECR_Ignore),(Channel="LSCharacter",Response=ECR_Overlap)),HelpMessage="Needs description")
 +Profiles=(Name="LootItem",CollisionEnabled=QueryOnly,bCanModify=True,ObjectTypeName="LootItem",CustomResponses=((Channel="WorldStatic",Response=ECR_Ignore),(Channel="WorldDynamic",Response=ECR_Ignore),(Channel="Pawn",Response=ECR_Ignore),(Channel="Visibility",Response=ECR_Ignore),(Channel="Camera",Response=ECR_Ignore),(Channel="PhysicsBody",Response=ECR_Ignore),(Channel="Vehicle",Response=ECR_Ignore),(Channel="Destructible",Response=ECR_Ignore),(Channel="LSCharacter",Response=ECR_Overlap),(Channel="Interact",Response=ECR_Overlap),(Channel="LootItem")),HelpMessage="Needs description")
 +Profiles=(Name="Interact",CollisionEnabled=QueryOnly,bCanModify=True,ObjectTypeName="ItemBox",CustomResponses=((Channel="WorldStatic",Response=ECR_Ignore),(Channel="WorldDynamic",Response=ECR_Ignore),(Channel="Pawn",Response=ECR_Ignore),(Channel="Visibility",Response=ECR_Ignore),(Channel="Camera",Response=ECR_Ignore),(Channel="PhysicsBody",Response=ECR_Ignore),(Channel="Vehicle",Response=ECR_Ignore),(Channel="Destructible",Response=ECR_Ignore),(Channel="LSCharacter",Response=ECR_Ignore),(Channel="ItemBox",Response=ECR_Overlap),(Channel="Interact")),HelpMessage="Needs description")
++Profiles=(Name="Monster",CollisionEnabled=QueryAndPhysics,bCanModify=True,ObjectTypeName="LSCharacter",CustomResponses=((Channel="Camera",Response=ECR_Ignore),(Channel="Vehicle",Response=ECR_Ignore),(Channel="Destructible",Response=ECR_Ignore),(Channel="Attack"),(Channel="Monster")),HelpMessage="Needs description")
 +DefaultChannelResponses=(Channel=ECC_GameTraceChannel1,DefaultResponse=ECR_Block,bTraceType=False,bStaticObject=False,Name="LSCharacter")
 +DefaultChannelResponses=(Channel=ECC_GameTraceChannel2,DefaultResponse=ECR_Ignore,bTraceType=True,bStaticObject=False,Name="Attack")
 +DefaultChannelResponses=(Channel=ECC_GameTraceChannel3,DefaultResponse=ECR_Ignore,bTraceType=False,bStaticObject=False,Name="ItemBox")
 +DefaultChannelResponses=(Channel=ECC_GameTraceChannel4,DefaultResponse=ECR_Ignore,bTraceType=True,bStaticObject=False,Name="Interact")
 +DefaultChannelResponses=(Channel=ECC_GameTraceChannel5,DefaultResponse=ECR_Ignore,bTraceType=False,bStaticObject=False,Name="LootItem")
-+EditProfiles=(Name="OverlapAll",CustomResponses=((Channel="LSCharacter",Response=ECR_Overlap),(Channel="ItemBox",Response=ECR_Overlap),(Channel="LootItem",Response=ECR_Overlap),(Channel="Attack",Response=ECR_Overlap),(Channel="Interact",Response=ECR_Overlap)))
++DefaultChannelResponses=(Channel=ECC_GameTraceChannel6,DefaultResponse=ECR_Ignore,bTraceType=True,bStaticObject=False,Name="Monster")
++EditProfiles=(Name="OverlapAll",CustomResponses=((Channel="LSCharacter",Response=ECR_Overlap),(Channel="ItemBox",Response=ECR_Overlap),(Channel="LootItem",Response=ECR_Overlap),(Channel="Attack",Response=ECR_Overlap),(Channel="Interact",Response=ECR_Overlap),(Channel="Monster",Response=ECR_Ignore)))
 +EditProfiles=(Name="OverlapAllDynamic",CustomResponses=((Channel="LSCharacter",Response=ECR_Overlap),(Channel="ItemBox",Response=ECR_Overlap),(Channel="LootItem",Response=ECR_Overlap)))
 +EditProfiles=(Name="IgnoreOnlyPawn",CustomResponses=((Channel="LSCharacter",Response=ECR_Ignore)))
 +EditProfiles=(Name="OverlapOnlyPawn",CustomResponses=((Channel="LSCharacter",Response=ECR_Overlap),(Channel="ItemBox"),(Channel="LootItem")))
@@ -125,8 +127,8 @@ ManualIPAddress=
 +EditProfiles=(Name="Ragdoll",CustomResponses=((Channel="LSCharacter",Response=ECR_Ignore)))
 +EditProfiles=(Name="Trigger",CustomResponses=((Channel="LSCharacter",Response=ECR_Overlap)))
 +EditProfiles=(Name="UI",CustomResponses=((Channel="LSCharacter",Response=ECR_Overlap)))
-+EditProfiles=(Name="BlockAllDynamic",CustomResponses=((Channel="ItemBox"),(Channel="LootItem")))
-+EditProfiles=(Name="BlockAll",CustomResponses=((Channel="ItemBox"),(Channel="LootItem")))
++EditProfiles=(Name="BlockAllDynamic",CustomResponses=((Channel="ItemBox"),(Channel="LootItem"),(Channel="Attack"),(Channel="Interact"),(Channel="Monster",Response=ECR_Ignore)))
++EditProfiles=(Name="BlockAll",CustomResponses=((Channel="ItemBox"),(Channel="LootItem"),(Channel="Monster",Response=ECR_Ignore),(Channel="Attack"),(Channel="Interact")))
 +EditProfiles=(Name="NoCollision",CustomResponses=((Channel="ItemBox"),(Channel="LootItem")))
 -ProfileRedirects=(OldName="BlockingVolume",NewName="InvisibleWall")
 -ProfileRedirects=(OldName="InterpActor",NewName="IgnoreOnlyPawn")
@@ -138,6 +140,7 @@ ManualIPAddress=
 +ProfileRedirects=(OldName="StaticMeshComponent",NewName="BlockAllDynamic")
 +ProfileRedirects=(OldName="SkeletalMeshActor",NewName="PhysicsActor")
 +ProfileRedirects=(OldName="InvisibleActor",NewName="InvisibleWallDynamic")
++ProfileRedirects=(OldName="OverlapOnlyMonster",NewName="Monster")
 -CollisionChannelRedirects=(OldName="Static",NewName="WorldStatic")
 -CollisionChannelRedirects=(OldName="Dynamic",NewName="WorldDynamic")
 -CollisionChannelRedirects=(OldName="VehicleMovement",NewName="Vehicle")
