--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -1,6 +1,6 @@
 [/Script/EngineSettings.GameMapsSettings]
 GameDefaultMap=/Game/LS/Maps/Title.Title
-EditorStartupMap=/Game/LS/Maps/LS_Level_1.LS_Level_1
+EditorStartupMap=/Game/LS/Maps/Title.Title
 GlobalDefaultGameMode=/Script/LooterShooter.LSGameMode
 GameInstanceClass=/Script/LooterShooter.LSGameInstance
 
